--- a/View/ChatBot.html.twig
+++ b/View/ChatBot.html.twig
@@ -5,7 +5,7 @@
         <br/>
         <div class="container grid-lg">
             <div class="columns">
-                <div class="col-12">
+                <div class="column col-12">
                     <div class="panel">
                         <div class="panel-header text-center">
                             <i class="fa fa-commenting-o fa-2x fa-fw" aria-hidden="true"></i>
