--- a/View/PortalRegisterMe.html.twig
+++ b/View/PortalRegisterMe.html.twig
@@ -5,7 +5,7 @@
         <br/>
         <div class="container grid-lg">
             <div class="columns">
-                <div class="col-12">
+                <div class="column col-12">
                     <div class="panel">
                         <form action="{{ fsc.url() }}?action=register" method="post">
                             <div class="panel-header text-center">
