--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -26,10 +26,10 @@
                                     <input type="hidden" name="active" value="{{ section.name }}"/>
                                     <input type="hidden" name="offset" value="0"/>
                                     <div class="columns">
-                                        <div class="column col-4 col-sm-12">
+                                        <div class="column">
                                             {{ macros.sectionButtons(section) }}
                                         </div>
-                                        <div class="column col-4 col-sm-12">
+                                        <div class="column">
                                             {{ macros.sectionSearch(section, i18n) }}
                                         </div>
                                         <div class="column col-4 col-sm-12">
