--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -56,6 +56,9 @@ h2, h3, h4, h5 {
 }
 
 .custom-table-scroll {
+    display: block;
+    width: 100%;
     overflow-x: auto;
-    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
 }
