--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -22,13 +22,12 @@
             <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('Dinamic/Assets/Images/apple-icon-180x180.png') }}" />
         {% endblock %}
         {% block css %}
-            <style>{{ assetCombine(['Plugins/webportal/node_modules/spectre.css/dist/spectre.min.css',
-'node_modules/font-awesome/css/font-awesome.min.css','Dinamic/Assets/CSS/webportal.css'])|raw }}</style>
-                {% for block in fsc.pageComposer.getBlocks('css') %}
-                    {{ block.content() | raw }}
-                {% endfor %}
-            {% endblock %}
-            {{ debugBarRender.renderHead()|raw }}
+            <style>{{ assetCombine(['Plugins/webportal/node_modules/spectre.css/dist/spectre.min.css','node_modules/font-awesome/css/font-awesome.min.css','Dinamic/Assets/CSS/webportal.css'])|raw }}</style>
+            {% for block in fsc.pageComposer.getBlocks('css') %}
+                {{ block.content() | raw }}
+            {% endfor %}
+        {% endblock %}
+        {{ debugBarRender.renderHead()|raw }}
     </head>
     <body>
         {% block navbar %}
