Fixed bug getting geo location for contacts.

--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -78,7 +78,7 @@
                                 <div class="form-group">
                                     <div class="input-group">
                                         <span class="input-group-addon">
-                                            <i class="fa fa-user fa-fw" aria-hidden="true"></i>
+                                            <i class="fa fa-envelope fa-fw" aria-hidden="true"></i>
                                         </span>
                                         <input type="text" name="fsContact" id="fsContact" class="form-input" maxlength="50" placeholder=" {{ i18n.trans('email') }}" required="" autocomplete="off"/>
                                     </div>
