--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -22,10 +22,12 @@
 
 h1 {
     margin-bottom: 10px;
+    word-break: break-all;
 }
 
 h2, h3, h4, h5 {
     margin-bottom: 5px;
+    word-break: break-all;
 }
 
 .navbar-top {
@@ -55,11 +57,13 @@ h2, h3, h4, h5 {
     height: auto;
 }
 
-.custom-table-scroll {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
+@media screen and (max-width: 600px) {
+    .custom-table-scroll {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        overflow-y: hidden;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
 }
