--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -64,6 +64,7 @@
             $(".section-div").removeClass("d-hide");
             $(".section-div").addClass("d-hide");
             $("#secDiv" + name).removeClass("d-hide");
+            return false;
         }
         function showSectionPage(name, offset) {
             $("#secForm" + name + " input[name=offset]").val(offset);
@@ -83,11 +84,11 @@
             {% for section in group %}
                 {% set btnClass = (section.name == fsc.active) ? 'btn btn-primary' : 'btn' %}
                 {% if section.count > 0 %}
-                    <button id="secBtn{{ section.name }}" class="section-btn {{ btnClass }} btn-block badge" data-badge="{{ section.count }}" onclick="showSection('{{ section.name }}');">
+                    <button id="secBtn{{ section.name }}" class="section-btn {{ btnClass }} btn-block badge" data-badge="{{ section.count }}" onclick="return showSection('{{ section.name }}');">
                         <i class="fa {{ section.icon }} fa-fw" aria-hidden="true"></i> {{ section.label }}
                     </button>
                 {% else %}
-                    <button id="secBtn{{ section.name }}" class="section-btn {{ btnClass }} btn-block" onclick="showSection('{{ section.name }}');">
+                    <button id="secBtn{{ section.name }}" class="section-btn {{ btnClass }} btn-block" onclick="return showSection('{{ section.name }}');">
                         <i class="fa {{ section.icon }} fa-fw" aria-hidden="true"></i> {{ section.label }}
                     </button>
                 {% endif %}
