--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -1,6 +1,6 @@
 /*
  * This file is part of webportal plugin for FacturaScripts.
- * Copyright (C) 2018 Carlos Garcia Gomez  <carlos@facturascripts.com>
+ * Copyright (C) 2018 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -20,6 +20,25 @@
     Author     : Carlos García Gómez
 */
 
+.body-padding {
+    padding: 10px;
+}
+
+.body-section {
+    min-height: 700px;
+}
+
+.custom-img-responsive {
+    max-width: 100%;
+    height: auto;
+}
+
+.footer-section {
+    padding: 20px 10px 50px 10px;
+    background-color: #F8F9FA;
+    border-top: 1px solid #E0E3E7;
+}
+
 h1 {
     margin-bottom: 10px;
     word-break: break-all;
@@ -34,31 +53,20 @@ h2, h3, h4, h5 {
     padding: 10px 10px 0px 10px;
 }
 
-.body-section {
-    min-height: 700px;
-}
-
-.body-padding {
-    padding: 10px;
-}
-
-.footer-section {
-    padding: 20px 10px 50px 10px;
-    background-color: #F8F9FA;
-    border-top: 1px solid #E0E3E7;
+p {
+    word-break: break-all;
 }
 
 .section-btn {
     margin-bottom: 5px;
 }
 
-.custom-img-responsive {
-    max-width: 100%;
-    height: auto;
+.word-break {
+    word-break: break-all;
 }
 
 @media screen and (max-width: 600px) {
-    .custom-table-scroll {
+    .custom-table-scroll table {
         display: block;
         width: 100%;
         overflow-x: auto;
