--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -1,7 +1,7 @@
 {% macro cookiesMessage(i18n, cookiesPage) %}
     <form action="" method="get">
         <input type="hidden" name="okCookies" value="TRUE"/>
-        <div class="toast toast-primary">
+        <div class="toast toast-primary cookies">
             {{ cookiesPage.description | raw }} <button type="submit" class="btn">{{ i18n.trans('accept') }}</button>
             <a href="{{ cookiesPage.url('public') }}">{{ i18n.trans('read-more') }}</a>
         </div>
