Fixed bugs with double escaping in titles and descriptions.

--- a/View/Master/PortalTemplate.html.twig
+++ b/View/Master/PortalTemplate.html.twig
@@ -7,8 +7,8 @@
         {% set webUrl = appSettings.get('webportal','url','') %}
         {% block meta %}
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <title>{{ fsc.title }}</title>
-            <meta name="description" content="{{ fsc.description }}" />
+            <title>{{ fsc.title | raw }}</title>
+            <meta name="description" content="{{ fsc.description | raw }}" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
             <meta name="generator" content="FacturaScripts" />
             {% if fsc.webPage.noindex %}<meta name="robots" content="noindex" />{% endif %}
