--- a/View/Macro/PortalTemplate.html.twig
+++ b/View/Macro/PortalTemplate.html.twig
@@ -138,6 +138,11 @@
         <div class="modal-container">
             <div class="modal-header">
                 <a href="#close" onclick="return hideModal('logoutModal');" class="btn btn-clear float-right" aria-label="Close"></a>
+                <div class="modal-title h5">{{ i18n.trans('my-profile') }}</div>
+                <span><a href="PortalProfile">{{ fsc.contact.nombre }}</a></span>
+
+                <div class="divider text-center"></div>
+
                 <div class="modal-title h5">{{ i18n.trans('logout') }}</div>
                 <i class="fa fa-user-circle fa-fw" aria-hidden="true"></i>
                 <span>{{ fsc.contact.email }}</span>
