--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -37,7 +37,7 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div class="custom-table-scroll">
+                                <div class="custom-scroll">
                                     {% include section.template %}
                                 </div>
                                 {{ macros.sectionPagination(section) }}
