- Fixed bug checking country data from localhost. - Registration now shows message when email is not registered.

--- a/View/PortalRegisterMe.html.twig
+++ b/View/PortalRegisterMe.html.twig
@@ -19,13 +19,13 @@
                                             <div class="column col-6">
                                                 <div class="form-group">
                                                     <label class="form-label" for="name">{{ i18n.trans('name') }}</label>
-                                                    <input class="form-input" type="text" name="name" id="name" placeholder="{{ i18n.trans('name') }}" autofocus=""/>
+                                                    <input class="form-input" type="text" name="name" id="name" placeholder="{{ i18n.trans('name') }}" autocomplete="off" autofocus=""/>
                                                 </div>
                                             </div>
                                             <div class="column col-6">
                                                 <div class="form-group">
                                                     <label class="form-label" for="email">{{ i18n.trans('email') }} *</label>
-                                                    <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" required=""/>
+                                                    <input class="form-input" type="text" name="email" id="email" placeholder="{{ i18n.trans('email') }}" autocomplete="off" required=""/>
                                                 </div>
                                             </div>
                                         </div>
