--- a/View/PortalRegisterMe.html.twig
+++ b/View/PortalRegisterMe.html.twig
@@ -9,7 +9,7 @@
                     <div class="panel">
                         <form action="{{ fsc.url() }}?action=register" method="post">
                             <div class="panel-header text-center">
-                                <i class="fa {{ fsc.getPageData()['icon']  }} fa-2x fa-fw" aria-hidden="true"></i>
+                                <i class="fa fa-address-card-o fa-2x fa-fw" aria-hidden="true"></i>
                                 <h1 class="panel-title">{{ i18n.trans('register-new-contact') }}</h1>
                             </div>
                             <div class="panel-body">
