--- a/Assets/CSS/webportal.css
+++ b/Assets/CSS/webportal.css
@@ -40,11 +40,12 @@
 }
 
 h1 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     word-wrap: break-word;
 }
 
 h2, h3, h4, h5 {
+    margin-top: 35px;
     margin-bottom: 5px;
     word-wrap: break-word;
 }
