--- a/View/Master/SectionController.html.twig
+++ b/View/Master/SectionController.html.twig
@@ -53,6 +53,12 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
+    {% for section in fsc.sections %}
+        {% if section.jsfile %}
+            <script type="text/javascript" src="{{ asset('Dinamic/Assets/JS/' ~ section.jsfile ~ '.js') }}"></script>
+        {% endif %}
+    {% endfor %}
+
     <script type="text/javascript">
         function showSection(name) {
             $(".section-btn").removeClass("btn-primary");
