--- a/View/Section/Profile.html.twig
+++ b/View/Section/Profile.html.twig
@@ -27,6 +27,54 @@
                             <input class="form-input" type="text" name="apellidos" value="{{ fsc.contact.apellidos }}" autocomplete="off"/>
                         </div>
                     </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('address') }}</label>
+                            <input class="form-input" type="text" name="direccion" value="{{ fsc.contact.direccion }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('po-box') }}</label>
+                            <input class="form-input" type="text" name="apartado" value="{{ fsc.contact.apartado }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('zip-code') }}</label>
+                            <input class="form-input" type="number" name="codpostal" value="{{ fsc.contact.codpostal }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('city') }}</label>
+                            <input class="form-input" type="text" name="ciudad" value="{{ fsc.contact.ciudad }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('province') }}</label>
+                            <input class="form-input" type="text" name="provincia" value="{{ fsc.contact.provincia }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('country') }}</label>
+                            <input class="form-input" type="text" name="codpais" value="{{ fsc.contact.codpais }}" autocomplete="off"/>
+                        </div>
+                    </div>
+                     <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('password') }}</label>
+                            <input class="form-input" type="password" name="password" autocomplete="off"/>
+                        </div>
+                    </div>
+                     <div class="column">
+                        <div class="form-group">
+                            <label class="form-label">{{ i18n.trans('re-password') }}</label>
+                            <input class="form-input" type="password" name="re-password" autocomplete="off"/>
+                        </div>
+                    </div>
                 </div>
                 <br/>
                 <button type="submit" class="btn btn-primary">
